# pytest-cards

./: Dockerfile  README.md  pyproject.toml  requirements.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: az-deploy.yml  build-python-image.yml  ci.yml  lint-dockerfiles.yml  lint-workflows.yml  main.yml
src/cards/: api.py  cli.py  db.py
tests/: conftest.py
tests/api/: test_add.py  test_count.py  test_delete.py  test_finish.py  test_list.py  test_start.py  test_update.py  test_version.py
tests/cli/: conftest.py  test_errors.py  test_list.py
