[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cards"
authors = [{name = "Johan Eriksson", email = "je@munobia.se"}]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python=">=3.11"
dynamic = ["version", "description"]
dependencies = [
    "tinydb==4.8.2",
    "typer==0.16.0",
    "rich==14.0.0"
]

[project.optional-dependencies]
test = [
    "pytest",
    "faker",
    "tox",
    "coverage",
    "pytest-cov",
]

[project.urls]
Home = "https://github.com/okken/cards"

[project.scripts]
cards = "cards:app"

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # bandit
    "S",
]

[tool.ruff.lint.per-file-ignores]
# assert is essential in pytest code
"tests/*" = ["S101"]
